better support to create mem leaks